--- a/packages/upload-b2/package.json
+++ b/packages/upload-b2/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "heroku-postbuild": "cd companion && npm install",
+    "heroku-postbuild": "cd companion && npm install && npm build",
     "dev": "parcel index.html"
   },
   "author": "",
