--- a/packages/upload-b2/package.json
+++ b/packages/upload-b2/package.json
@@ -14,8 +14,6 @@
     "parcel": "^1.12.4"
   },
   "dependencies": {
-    "@uppy/core": "^1.11.0",
-    "@uppy/dashboard": "^1.10.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -25,9 +23,40 @@
     "lodash": "^4.17.15",
     "lodash.includes": "^4.3.0",
     "lodash.isboolean": "^3.0.3",
-    "purest": "^3.1.0",
     "request-oauth": "^1.0.0",
     "rimraf": "^3.0.2",
-    "whatwg-fetch": "^3.0.0"
+    "whatwg-fetch": "^3.0.0",
+    "@purest/providers": "1.0.1",
+    "@uppy/fs-tail-stream": "1.2.0",
+    "atob": "2.1.2",
+    "aws-sdk": "2.587.0",
+    "backblaze-b2": "^1.5.0",
+    "body-parser": "1.19.0",
+    "chalk": "2.4.2",
+    "common-tags": "1.8.0",
+    "connect-redis": "4.0.3",
+    "express-interceptor": "1.2.0",
+    "express-prom-bundle": "3.3.0",
+    "express-request-id": "1.4.1",
+    "grant": "4.6.5",
+    "helmet": "3.21.2",
+    "isobject": "3.0.1",
+    "jsonwebtoken": "8.5.1",
+    "lodash.merge": "4.6.2",
+    "mime-types": "2.1.25",
+    "morgan": "1.9.1",
+    "ms": "2.1.2",
+    "node-redis-pubsub": "4.0.0",
+    "node-schedule": "1.3.2",
+    "prom-client": "11.5.3",
+    "purest": "3.1.0",
+    "redis": "2.8.0",
+    "request": "2.88.0",
+    "semver": "6.3.0",
+    "serialize-error": "^2.1.0",
+    "tus-js-client": "1.8.0",
+    "uuid": "3.3.3",
+    "validator": "^12.1.0",
+    "ws": "6.2.1"
   }
 }
