--- a/packages/upload-b2/package.json
+++ b/packages/upload-b2/package.json
@@ -13,19 +13,9 @@
     "parcel": "^1.12.4"
   },
   "dependencies": {
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "fd-slicer": "^1.1.0",
-    "jws": "^4.0.0",
-    "lodash": "^4.17.15",
-    "lodash.includes": "^4.3.0",
-    "lodash.isboolean": "^3.0.3",
-    "request-oauth": "^1.0.0",
-    "rimraf": "^3.0.2",
-    "whatwg-fetch": "^3.0.0",
     "@purest/providers": "1.0.1",
+    "@uppy/core": "^1.0.0",
+    "@uppy/dashboard": "^1.10.1",
     "@uppy/fs-tail-stream": "1.2.0",
     "atob": "2.1.2",
     "aws-sdk": "2.587.0",
@@ -34,13 +24,22 @@
     "chalk": "2.4.2",
     "common-tags": "1.8.0",
     "connect-redis": "4.0.3",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "express-interceptor": "1.2.0",
     "express-prom-bundle": "3.3.0",
     "express-request-id": "1.4.1",
+    "express-session": "^1.17.1",
+    "fd-slicer": "^1.1.0",
     "grant": "4.6.5",
     "helmet": "3.21.2",
     "isobject": "3.0.1",
     "jsonwebtoken": "8.5.1",
+    "jws": "^4.0.0",
+    "lodash": "^4.17.15",
+    "lodash.includes": "^4.3.0",
+    "lodash.isboolean": "^3.0.3",
     "lodash.merge": "4.6.2",
     "mime-types": "2.1.25",
     "morgan": "1.9.1",
@@ -51,11 +50,14 @@
     "purest": "3.1.0",
     "redis": "2.8.0",
     "request": "2.88.0",
+    "request-oauth": "^1.0.0",
+    "rimraf": "^3.0.2",
     "semver": "6.3.0",
     "serialize-error": "^2.1.0",
     "tus-js-client": "1.8.0",
     "uuid": "3.3.3",
     "validator": "^12.1.0",
+    "whatwg-fetch": "^3.0.0",
     "ws": "6.2.1"
   }
 }
