--- a/packages/upload-b2/package.json
+++ b/packages/upload-b2/package.json
@@ -5,11 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "parcel index.html"
+    "dev": "parcel index.html",
+    "build": "parcel build index.html && touch dist/CNAME && echo \"upload-streaming.michaelsalim.co.uk\" >> dist/CNAME",
+    "gh-pages":  "gh-pages -td dist",
+    "deploy": "yarn build && yarn gh-pages"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "parcel": "^1.12.4"
   },
   "dependencies": {
